# nats-wasip3

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: publish.yml
examples/: integration_tests.rs  pubsub.rs
src/: client.rs  error.rs  jetstream.rs  kv.rs  lib.rs  nkey.rs  object_store.rs  proto.rs  tls.rs
wit/: world.wit
